--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "install": "^0.13.0",
     "npm": "^8.1.2",
     "react": "^17.0.2",
@@ -17,6 +18,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
+    "slate": "^0.66.5",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.69.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
