--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "immutable": "^4.0.0",
     "install": "^0.13.0",
     "npm": "^8.1.2",
     "react": "^17.0.2",
@@ -16,7 +21,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^9.0.0",
     "slate": "^0.66.5",
     "slate-history": "^0.66.0",
