--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT = "5000"
+CLIENT_ID=978393666589-suvptocpcnnokdhtdrof76hc1tuk876e.apps.googleusercontent.com
+CLIENT_SECRET=OnAlDdsCUlW5RTH37wu4nSlw
 CONNECTION_URL = "mongodb+srv://vasu:12@cluster0.wqxek.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
