--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "node": "^17.0.1",
-    "passport": "^0.5.0"
+    "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-session": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
