--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "immutable": "^4.0.0",
     "install": "^0.13.0",
     "npm": "^8.1.2",
+    "quill-mention": "^3.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^9.0.0",
