--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "html-react-parser": "^1.4.0",
     "immutable": "^4.0.0",
     "install": "^0.13.0",
     "npm": "^8.1.2",
