--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.1.38",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
