--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-owl-carousel": "^2.3.3",
     "react-phone-number-input": "^3.1.38",
     "react-player": "^2.9.0",
     "react-quill": "^1.3.5",
